# KoopSTD

./: .gitignore  README.md  llm.ipynb  lorenz63.ipynb  pdm_attratctors.ipynb  pr1_discussion.ipynb  pyproject.toml  requirements.txt
examples/: gpt2_hidden_states.ipynb  lorenz63.ipynb  pdm_attratctors.ipynb
koopstd/: __init__.py  datasets.py  dynametric.py  eval.py  geometric.py  kmd.py
